# G11_TFM_NEXT_2026

./: README.md
dashboard/: TFM_G11.twb  TFM_G11.twbx
dashboard/TFM_G11.twb Files/Data/Datasources/: germany.dashboard.hyper
docs/: G11_TFM.html
python-TFM/: README.md  README.txt  pyproject.toml  requirements.txt
python-TFM/data/interim/: germany.dashboard.csv  germany.veterinarians.csv  korea.csv
python-TFM/data/models/: KNN_kmeans_clustering_pipeline.joblib  RL_regresion_logistica_burnout.joblib
python-TFM/data/processed/: germany.dashboard.csv  germany.veterinarians.csv
python-TFM/data/raw/1.Germany/: Veterinarians In germany.txt  germany.veterinarians.csv  germany.veterinarians.xlsx  pone.0310819.s001.xlsx
python-TFM/data/raw/2.India/: India.xlsx  Post Covid healthcare in india.txt  peerj-12-18039-s001.xls
python-TFM/data/raw/3.Nigeria/: Nigeria.xlsx  Nigerian Physicians.txt  Original_data for CV study.xls
python-TFM/data/raw/4.Korea/: Enlace Korean Version CBI.txt  pone.0221323.s002.sav
python-TFM/data/raw/5.Jordan/: Enlace Nurses in Jordan.txt  Jordan.xlsx  journal.pone.0334603.s001.xlsx
python-TFM/data/raw/6.Africa/: Cuidadores africanos.txt  pgph.0000286.s003.sav  pgph_0000286_s003.csv
python-TFM/data/raw/7.Lebanon/: Anesthesiology residents.txt  Lebanon.xlsx  journal.pone.0322940.s001.xlsx
python-TFM/data/raw/8B.Puerto Rico/: Puerto_Rico.xlsx  httpswww.ebi.ac.ukbiostudieseuropep.txt  pone.0304886.s001.xlsx  pone.0304886.s002.docx
python-TFM/data/raw/9B.Bangladeshi/: Raw Data_DIB v2.xlsx  httpsdata.mendeley.comdatasets3d7h5.txt
python-TFM/data/reports/: EDA_Reporte.csv  EDA_conteo_de_categorias.txt
python-TFM/notebooks/: G11_EDA.ipynb  G11_ML.ipynb  dashboard.ipynb
